--- a/firstproject/templates/base.html
+++ b/firstproject/templates/base.html
@@ -15,15 +15,23 @@
 </head>
 
 <body>
-  <header role="header" data-include="header.html">
+  <header>
         <div id="headerwrap">
             <div id="header">
                 <h1>
                     <a href="{% url 'home' %}">logo</a>
                 </h1>
                 <div class="nav1">
-                    <a>회원가입</a>
-                    <a>로그인</a>
+                  {% if user.is_authenticated %}
+                  <a>안녕하세요. {{ user.username }}님 </a>
+                  <a href="javascript:{document.getElementById('logout').submit()}">Logout</a>
+                  <form id="logout" method="POST" action="{% url 'logout' %}">{% csrf_token %}
+                    <input type="hidden" />
+                  </form>
+                  {% else %}
+                  <a href="{% url 'signup' %}">회원가입</a>
+                  <a href="{% url 'login' %}">로그인</a>
+                  {% endif %}
                 </div>
                 <div id="gnb">
                     <ul class="gw">
