--- a/static/css/main_style.css
+++ b/static/css/main_style.css
@@ -13,12 +13,18 @@ body{
 #headerwrap #header {position:relative; max-width:100%; height:90px; margin:0 auto; text-align:left; }
 #header{ display:flex;  height:auto;  background-color: #ccc;  margin :0;  height: 100px; }
 #header .nav1{
-  position: absolute; top:10px; right: 20px;color:white;
+  position: absolute; top:10px; right: 20px; color:white; z-index:1;
 }
 #gnb { 
    position:absolute; width: 800px; width:100%;
 }
-#gnb .gw { display: flex; justify-content: center; overflow:hidden; width:100%;  padding:0; z-index:10; }
+#gnb .gw { 
+  display: flex; 
+  justify-content: center; 
+  overflow:hidden; 
+  width:100%;  
+  padding:0; 
+}
 #gnb .gw li { float:left; width:12%; list-style : none; }
 #gnb .gw li a { 
   display:block; 
