--- a/firstproject/templates/loginbase.html
+++ b/firstproject/templates/loginbase.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,9 +12,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
     <!-- 합쳐지고 최소화된 최신 자바스크립트 -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="{% static 'css/login_style.css' %}">
+    <script src="{% static 'js/app.js' %}"></script>        
 </head>
 <body>
+    
     {% block content %}
+
     {% endblock %}
 
     <form id="logout" method="POST" action="{% url 'logout' %}">
