--- a/static/css/login_style.css
+++ b/static/css/login_style.css
@@ -1,4 +1,3 @@
-
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0-modified | 20110126
    License: none (public domain)
@@ -366,164 +365,35 @@ textarea {
     padding: 0.2em 0;
 }
 
+@font-face { font-family: 'GyeonggiBatang'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/GyeonggiBatang.woff') format('woff'); font-weight: normal; font-style: normal; }
 
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
-
-*{
-  box-sizing:border-box;
-}
 body{
-  margin:0; padding:0; font-family: 'Nanum Gothic', Arial, Helvetica, sans-serif;;
+    margin-top: 200px;
 }
-#header h1{
-  position : absolute;
-  top:25px;
-  left:30px;
-  font-size : 20px;
-}
-#header h1 a{
-  text-decoration:none;
-}
-#headerwrap { position:fixed; top:0; left:0; width:100%; text-align:center; z-index:1000; border:1px solid black;}
-#headerwrap #header {position:relative; max-width:100%; height:70px; margin:0 auto; text-align:left; }
-#header{ display:flex;  height:auto;  background-color: #ccc;  margin :0;  height: 100px; }
-#header .nav1{
-  position: absolute;
-  top:5px;
-  right: 10px;
-  z-index:1;
-}
-#header .nav1 a{
-  color: white;
-  text-decoration:none;
-}
-#header .nav1 a::after{
-  padding-left:5px; content:"│"
-}
-#header .nav1 a:last-child::after{
-  content:""
-}
-#gnb { 
-   position:absolute; width: 800px; width:100%;
-}
-#gnb .gw { 
-  display: flex; 
-  justify-content: center; 
-  overflow:hidden; 
-  width:100%;  
-  padding:0; 
-}
-#gnb .gw li { float:left; width:12%; list-style : none; }
-#gnb .gw li a { 
-  display:block; 
-  width:100%; 
-  height:70px; 
-  line-height:80px; 
-  text-align:center;
-  font-weight:800; 
-  font-size:18px; 
-  color: white; letter-spacing:-0.5pt;
-  text-decoration:none;  
-}
-#gnb .gw li a:hover,#gnb li a.on { color:#a9a9aa; }
-
-@media (max-width:600px){
-  #gnb {
-      display:none;
-  }
-}
-/* Style the header */
-header {
-  display:flex;
-  flex:1;
-}
-
-/* Container for flexboxes */
-section {
-  display: -webkit-flex;
-  display: flex;
-}
-.content-wrap{
-  margin :0 auto;
-  margin-top : 100px;  
-  width : 1000px;
-}
-
-/* Style the navigation menu */
-.nav_title{
-  display: flex;
-  justify-content: center;
-  padding : 30px 0 30px 0;
-  font-size: 18px;
-  font-weight : bold;
-  height:auto;
-  background-color:white;
-  color:black;
-  text-decoration:underline;
-  border : 1px solid black;
-}
-nav {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
-  background: white;
-  border : 1px solid black;
-}
-
-/* Style the list inside the menu */
-nav ul {
-  list-style-type: none;
-  padding : 0px;
-  margin:0;
-}
-nav ul li{
-  padding: 0;  
-  border-bottom : 1px solid #ccc;
-}
-nav ul li a:visited{
-  text-decoration :none;
-  color :black;
-}
-nav ul a{
-  display:flex;
-  text-decoration: none;
-  padding: 10px;
-}
-nav > ul > li:hover{ 
-  background-color: #2D59D8;
-}
-
-/* Style the content */
-article {
-  -webkit-flex: 3;
-  -ms-flex: 3;
-  flex: 3;
-  background-color: white;
-  padding: 10px;
-  border : 1px solid black;
-}
-.main-title p {
-  font-size:15px;
-  color: #bbb;
-}
-article h1{
-  font-size: 20px;
-}
-article p{
-  font-size:14px;
-  color:#bbb;
-}
-
-/* Style the footer */
-footer {
-  background-color: white;
-  padding: 10px;
-  text-align: center;
-  color: #777;
-}
-@media (max-width: 600px) {
-  section {
-    -webkit-flex-direction: column;
+.login__layout{
+    display:flex;
+    flex:1;
+    width: 360px;
+    border : 5px solid #ccc;
+    border-radius: 20px;
     flex-direction: column;
-  }
+    align-items: center;
+    justify-content: center;
+    margin : auto;
+    padding : 20px 0 20px 0;
+}
+.login__layout h1{
+    font-size : 24px;
+    margin-top:20px;
+
+}
+.login__layout__form{
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+}
+@media ( min-height:960px ){
+    body{
+        margin-top: 330px;
+    }
 }
