--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -27,6 +27,10 @@
         <input class="btn btn-primary" type="submit" value="Login">
     </form>
 </div>
+<div class="login__site">
+    <a href="{% url 'signup' %}">회원가입</a>
+    <a href="{% url 'home' %}">로그인 없이 홈페이지 접속</a>
+</div>
 
 
 
